--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,8 +51,8 @@ jobs:
         path: bootstrap/manager/src/main/resources/static
     - name: Validate Gradle Wrapper
       uses: gradle/actions/wrapper-validation@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
+    - name: Setup Java JDK
+      uses: actions/setup-java@v4.2.2
       with:
         java-version: 20
         distribution: temurin
